Add industrial agent solution profile
